-----

0.0.7    to be released
    [Added]
       * Support for KeepAlive messages when the server
         advertizes support for it
       * Minimal testing (correct loading of source code)
    [Fixed]
       * Possible out-of-order data transfer to the server
         due to missing sychronization points

0.0.6    2024-09-27
    [Added]
       * Abstract connection driver and Unix connection driver implementations
       * Cleanup of callbacks at connection close; also waits for in-progress
         cancellations (e.g. due to DESTROY) before finishing the connection
       * Connection establishement now part of Sys::Async::Virt through
         connect() function
    [Fixed]
       * Handling of the 'nparams' argument in network calls
       * Dependency listing should include 'Sublike::Extended'

0.0.5    2024-09-24
    [Added]
       * Documentation
    [Fixed]
       * Syntax error in Stream.pm
    [Removed]
       * Unused methods "register_stream" and "unregister_stream"

0.0.4    2024-09-23
    [Added]
       * Methods returning streams ($volume->upload; $volume->download)
       * Methods linking to protocol messages with '@generator: none'
       * Dependency on Sublike::Extended for easier and faster named
         argument processing
    [Fixed]
       * Weak callback references, allowing callbacks to be cleaned up
         when references are dropped by user code
       * Instantiation of StorageVol and Secret objects in API return values
    [Changed]
       * Lots of improvements in 'fill-templates' (entrypoint generator)
    [Removed]
       * Various debugging statements

0.0.3    2024-09-20
    [Added]
       * Mention related C header file in list of unimplemented entry points
       * Whitelist some entry points for generation, despite being marked
         'server' or 'none'
       * List intentionally unimplemented entry points (in Domain.pm
         only for now)
    [Changed]