@@ -10,7 +10,7 @@
 ####################################################################
 
 
-use v5.20;
+use v5.26;
 use warnings;
 use experimental 'signatures';
 use Feature::Compat::Try;
